--- a/Web.config
+++ b/Web.config
@@ -30,7 +30,7 @@
 	  <add key="SMTPHost" value="3OzZf/CQ8KBtiS4yRYMmGey2M1Efvkb0NK+sDK1+gk4="/>
 	  <add key="SMTPPort" value="25"/>
 	  <add key="SMTPUsername" value="aU4wR0Tzi94lfXQJOMNImojGYsv+8Nv0chTnyX0VzIU="/>
-	  <add key="SMTPPassword" value=""/>
+	  <add key="SMTPPassword" value="iPwVE3Pfw55ITkV6T5/IhA=="/>
 	  <add key="SMTPSSL" value="true"/>
 	  <add key="SMTPDefaultCredentials" value="true"/>
 	  <add key="SMTPDeliveryMethod" value="Network"/>
